[package]
name = "sv-map-viewer"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]

[[bin]]
name = "spinning-square"
path = "src/main.rs"

[dependencies]
image = "0.16"
xnb = {path = "../xnb"}
piston = "0.34"
piston2d-graphics = "0.23"
#pistoncore-glutin_window = "0.40"
piston_window = "0.70.0"
piston2d-opengl_graphics = "0.48"
squish = {path = "../squish-rs"}
